# misbot

./: .gitignore  CHANGELOG.md  Containerfile  Makefile  README.md  alembic.ini  botdb.sqlite  containers.md  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 202601192135_initial_revision.py  202601220149_modify_channel.py  202601291435_add_players_and_time_spent_tables.py
nginx/: nginx.conf
src/misbot/: __init__.py  app.py  config.py  constans.py  messages.py  server.py
src/misbot/bot/: __init__.py  app.py  handlers.py
src/misbot/database/: db.py  exec.py  models.py
src/misbot/server/: __init__.py  app.py  constans.py  schemas.py  utils.py  uvicorn.py
