[project]
name = "misbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bohdan Stratila", email = "googlobody@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot>=22.5",
]

[project.scripts]
misbot = "misbot:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
